# OpenGL-Playground

./: .gitmodules  CMakeLists.txt  README.md  configure_and_build.sh
src/: CMakeLists.txt  camera.hpp  container.cpp  hello_triangle.cpp  hello_window.cpp  lighting.cpp  main.cpp  mesh.hpp  model.hpp  model_loading.cpp  shader.hpp
src/shader/: container.fs  container.vs  hello_triangle.fs  hello_triangle.vs  lighting_object.fs  lighting_object.vs  lighting_source.fs  lighting_source.vs  model_loading.fs  model_loading.vs
